questionbank with concept map

--- a/Admin/Admin/Admin.csproj
+++ b/Admin/Admin/Admin.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="mongocsharpdriver" Version="2.7.0" />
+    <PackageReference Include="Potentiometer.Core" Version="1.0.5" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
     <PackageReference Include="YamlDotNet" Version="5.0.1" />
   </ItemGroup>
