--- a/Admin/Admin/appsettings.json
+++ b/Admin/Admin/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MongoConnection": {
-    "ConnectionString": "mongodb://db/database",
+    "ConnectionString": "mongodb://db/adminDatabase",
     "Database": "adminDatabase"
   },
   "Logging": {
