--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
             - "SERVICE_TAGS=questionbanktag"
         expose:
             - "80"
+        volumes:
+            - "/machine_config:/app/machine_config"
     db:
         image: "mongo:latest"
         
