--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
             - "80"
         volumes:
             - "/machine_config:/app/machine_config"
+        env_file:
+            - .env
     db:
         image: "mongo:latest"
         
